@@ -2,15 +2,15 @@
 
 use v5.26;
 
-use Test::More tests => 2;
-use JSON::Relaxed 0.061;
+use Test::More tests => 4;
+use JSON::Relaxed 0.063;
 note("JSON::Relaxed version $JSON::Relaxed::VERSION\n");
 
 # Spec say: Commas are optional between objects pairs and array items.
 
 my $json = <<'EOD';
 {
- buy: [milk, eggs, butter, 'dog bones',],
+ buy: [milk, eggs, butter, `dog bones`,],
  tasks: [ {name:exercise, completed:false,}, {name:eat, completed:true,}, ],
 }
 EOD
@@ -33,4 +33,15 @@ $p = JSON::Relaxed::Parser->new;
 $res = $p->parse($json);
 is_deeply( $res, $xp, "no commas between elements" );
 diag($p->err_msg) if $p->is_error;
+
+my $json = <<'EOD';
+{
+ buy: [ , milk eggs butter 'dog bones']
+ tasks: [ {name:exercise completed:false} {name:eat completed:true} ]
+}
+EOD
+$p = JSON::Relaxed::Parser->new;
+$res = $p->parse($json);
+ok( !defined($res), "no leading comma" );
+is($p->err_msg, "unexpected item in array: got ,", "leading comma error" );
 
