@@ -2,6 +2,8 @@ Revision history for JSON-Relaxed
 
 0.063
 	- Make commas between array elements optional.
+	- Disallow leading commas in a list (spec).
+	- Allow backticks for string quotes (spec).
 	- Improve detection of string join.
 
 0.062	2024-04-03
